--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,20 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+### CodeKit ###
+# General CodeKit files to ignore
+config.codekit
+/min
+
+
+### Sass ###
+.sass-cache
+*.css.map
+*.scssc
+
+
+### Other Stuff ###
+pass.inc.php
+css/style.css
+pages/kladd.html
